# syncfast

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  file-formats.md  rustfmt.toml  test.sh
.github/workflows/: test.yml
adler32/: Cargo.toml
adler32/src/: lib.rs
src/: close_stdout.rs  delta.rs  diff.rs  hasher.rs  index.rs  lib.rs  locations.rs  main.rs  patch.rs  streaming_iterator.rs  utils.rs
src/sync/: fs.rs  locations.rs  mod.rs  ssh.rs  utils.rs
src/sync/ssh/: mod.rs  proto.rs
tests/: test_diff.rs
