[package]
name = "syncfast"
version = "0.1.0"
edition = "2018"
authors = ["Remi Rampin <r@remirampin.com>"]
description = "rsync/rdiff/zsync clone"
repository = "https://github.com/remram44/syncfast"
documentation = "https://docs.rs/syncfast/"
license = "BSD-3-Clause"

[[bin]]
name = "syncfast"
path = "src/main.rs"

[dependencies]
cdchunking = "0.2"
chrono = "0.4"
clap = "2"
futures = "0.3"
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = "0.4"
rusqlite = { version = "0.16", features = ["chrono"] }
sha1 = "0.6"

[dev-dependencies]
tempfile = "3"
